--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=1.2.2
+version=2.0.0
 name=intellij-spring-assistant
-group=dev.eltonsandre.intellij
+group=space.wintersea.intellij
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
